--- a/src/Dotnet.Stripe.Android.QuickStart/Resources/layout/activity_main.xml
+++ b/src/Dotnet.Stripe.Android.QuickStart/Resources/layout/activity_main.xml
@@ -16,19 +16,19 @@
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toTopOf="parent"/>
     <Button
-        android:id="@+id/pay_button"
-        android:text="Pay now"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-    <Button
         android:id="@+id/address_button"
         android:text="Add shipping address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+    <Button
+        android:id="@+id/pay_button"
+        android:text="Pay now"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/address_button"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
