--- a/src/QuickStart.Dotnet.StripeDroid/Resources/layout/activity_main.xml
+++ b/src/QuickStart.Dotnet.StripeDroid/Resources/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".CheckoutActivity"
     tools:showIn="@layout/activity_checkout">
     <TextView
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Stripe for .NET Android QuickStart"
