--- a/src/QuickStart.Dotnet.StripeDroid/Resources/layout/activity_main.xml
+++ b/src/QuickStart.Dotnet.StripeDroid/Resources/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Stripe for .NET Android QuickStart"
+        android:text="Hello Stripe for .NET Android"
         android:textSize="24dp"
         android:layout_margin="16dp"
         android:layout_marginTop="32dp"
