--- a/src/QuickStart.Dotnet.StripeDroid/Resources/layout/activity_main.xml
+++ b/src/QuickStart.Dotnet.StripeDroid/Resources/layout/activity_main.xml
@@ -8,9 +8,10 @@
     tools:context=".CheckoutActivity"
     tools:showIn="@layout/activity_checkout">
     <TextView
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Stripe for .NET Android QuickStart"
+        android:text="Hello Stripe for .NET Android"
         android:textSize="24dp"
         android:layout_margin="16dp"
         android:layout_marginTop="32dp"
